fixtures/traces/24-js-cause-chain.txt
file:///home/dev/app/s24_cause_chain.mjs:9
    throw new Error("signer initialization failed", { cause: err });
          ^

Error: signer initialization failed
    at initSigner (file:///home/dev/app/s24_cause_chain.mjs:9:11)
    at file:///home/dev/app/s24_cause_chain.mjs:13:1
    ... 2 lines matching cause stack trace ...
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5) {
  [cause]: Error: key file missing at /etc/app/signing.pem
      at loadSigningKey (file:///home/dev/app/s24_cause_chain.mjs:2:9)
      at initSigner (file:///home/dev/app/s24_cause_chain.mjs:7:12)
      at file:///home/dev/app/s24_cause_chain.mjs:13:1
      at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
      at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
      at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)
}

Node.js v22.13.0
